# lexprep

./: .editorconfig  .gitattributes  .gitignore  ACCURACY.md  CITATION.cff  CONTRIBUTING.md  LICENSE  METHODS.md  QUICKSTART.md  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
examples/: README.md  sample_persian.txt  sample_words.csv
paper/: paper.bib  paper.md
scripts/: freeze-deps.sh
src/lexprep/: __init__.py  __main__.py  cli.py  length.py  manifest.py  packaging.py
src/lexprep/en/: __init__.py  g2p.py  pos.py  syllables.py
src/lexprep/fa/: g2p.py  g2p_cached.py  pos.py  syllables.py
src/lexprep/io/: files.py
src/lexprep/ja/: pos_map.py  pos_stanza.py  pos_unidic.py
src/lexprep/sampling/: audit.py  shuffle_rows.py  stratified.py
tests/: conftest.py  test_cli.py  test_en_g2p.py  test_en_pos.py  test_en_syllables.py  test_fa_g2p.py  test_fa_pos.py  test_fa_syllables.py  test_io_files.py  test_ja_pos.py  test_ja_pos_map.py  test_length.py  test_manifest.py  test_packaging.py  test_sampling_audit.py  test_shuffle.py  test_stratified.py  test_stratified_full.py  test_syllables.py  test_web_api.py
web/: app.py  requirements.txt
web/static/css/: style.css
web/static/js/: app.js
web/templates/: about.html  accuracy.html  admin.html  admin_disabled.html  author.html  base.html  contribute.html  home.html  index.html  overview.html  references.html  sampling.html
web/templates/partials/: footer.html
